fix category header spacing

--- a/common/common.scss
+++ b/common/common.scss
@@ -19,6 +19,10 @@ html {
   }
 }
 
+.category-box-heading{
+  margin-below: 0px !important; 
+}
+
 .background-container{
   display:none;
 }
